<resources>
    <string name="app_name">朴朴</string>

    <string name="title_home">首页</string>
    <string name="title_dashboard">商品</string>
    <string name="title_discover">发现</string>
    <string name="title_mine">我的</string>
    <string name="out_tip">再点击一次退出朴朴超市</string>

    <string name="srl_footer_nothing">没有更多数据了</string>
    <string name="mine_bring_in">朴朴招募</string>
    <string name="mine_about">关于朴朴</string>
    <string name="mine_share">分享朴朴</string>
    <string name="mine_service">联系客服</string>
    <string name="mine_card">电子卡订单</string>
    <string name="mine_help">帮助与反馈</string>
    <string name="mine_arrival">到货提醒</string>
    <string name="mine_collcetion">我的收藏</string>
    <string name="mine_invoice">发票与报销</string>
    <string name="mine_address">收货地址</string>
    <string name="mine_invite_reward">邀请有礼</string>
    <string name="mine_wait">待支付</string>
    <string name="mine_wait_receiving">待收货</string>
    <string name="mine_remain">待评价</string>
    <string name="mine_order_all">全部订单</string>
    <string name="mine_discount">优惠券</string>
    <string name="mine_gift_card">礼品卡</string>
    <string name="mine_balance">余额(元)</string>
    <string name="confirm">确定</string>
    <string name="set_limits_tips">当前应用缺少必要权限,请打开所需权限。</string>
    <string name="go_set">去设置</string>
    <string name="go_set_tips">当前应用缺少必要权限，请点击"设置"-"权限"-打开所需权限。</string>
    <string name="login_tips">注册/登录</string>
    <string name="set">设置</string>
    <string name="exit">退出登录</string>
    <string name="location_tips">位置提醒</string>
    <string name="auto_delivery">开启后，会根据您的当前位置提醒配送小区</string>
    <string name="user_psw">账号密码</string>
    <string name="no_set">未设置</string>
    <string name="user_agreement">朴朴用户服务协议</string>
    <string name="user_policy">朴朴用户隐私权限政策</string>
    <string name="privacy">隐私</string>
    <string name="user_soft_agreement">朴朴软件许可及服务协议</string>
    <string name="clear_cache">清除缓存</string>
    <string name="attention_tips">点击登录后可关注主题和作者</string>
    <string name="discover_hot">热门</string>
    <string name="discover_recommend">推荐</string>
    <string name="discover_newest">最新</string>
    <string name="collect">收藏</string>
    <string name="private_letter">私信</string>
    <string name="attention">+关注</string>

    <string name="photo_count">%1$d/%2$d</string>
    <string name="halving_line">/</string>
    <string name="all_get">全部领取</string>
    <string name="yuan">¥</string>
    <string name="get">领取</string>
    <string name="congratulation">恭喜您成功领取红包</string>
    <string name="get_red_packet_tips">恭喜您成功领取%1$s元红包</string>
    <string name="login_welcome">欢迎来到朴朴</string>
    <string name="login_on_login_button">本机号码一键登录</string>
    <string name="login_agreement">已认真阅读并同意中国移动认证服务条款和朴朴用户协议、隐私协议并使用本机号码登录</string>
    <string name="china_mobile_agreement">中国移动提供认证服务</string>
    <string name="other_account">社交账号登录</string>
    <string name="other_account_register_login">其他号码登录/注册</string>
    <string name="logining">登录中</string>
    <string name="service_tips">客服小姐姐，还未上线哦</string>
    <string name="wchat_login_tips">暂不支持微信登录</string>
    <string name="login_suc">登录成功</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="login_username">账号登录</string>
    <string name="get_code">获取验证码</string>
    <string name="code_agreement">请认真阅读朴朴用户协议、隐私协议</string>
    <string name="phone">手机号</string>
    <string name="phone_error_tips">抱歉！您输入的号码有误</string>
    <string name="login">登录</string>
    <string name="code_send_to">验证码已发至 %1$s</string>
    <string name="resend_code">重新发送</string>
    <string name="resend_code_able">%1$ds后可重新发送</string>
    <string name="send_suc">发送成功</string>
    <string name="user_manager">账号管理</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="change">修改</string>
    <string name="apply_to_logout">申请注销账号</string>
    <string name="exit_login">退出登录</string>
    <string name="unbind">解绑</string>
    <string name="wechat">微信</string>
    <string name="msg_center">消息中心</string>
    <string name="online_server">在线客服</string>
    <string name="msg_sys">系统消息</string>
    <string name="no_msg">暂无新消息</string>
    <string name="one">1</string>
    <string name="promotion_des"><![CDATA[16点秒杀价->蒙牛红枣酸奶低至0.99元]]></string>
    <string name="msg_promotion">促销活动</string>
    <string name="msg_money">我的资产</string>
    <string name="msg_goods">到货提醒</string>
    <string name="order_arrive">订单已签收</string>
    <string name="msg_order">订单消息</string>
    <string name="with_server_msg">查看与客服的沟通记录</string>
    <string name="fun_no_support">功能暂未实现，敬请期待</string>
    <string name="exit_tips">确定退出登录？</string>
    <string name="affirm_save">确认保存</string>
    <string name="change_suc">修改成功</string>
    <string name="change_name">修改昵称</string>
    <string name="change_tips">请输入用户昵称</string>
    <string name="old_phone">原手机号</string>
    <string name="phone_code">验证码</string>
    <string name="send_phone_code">获取验证码</string>
    <string name="voice_code">收不到验证码？使用语言验证码</string>
    <string name="phone_no_use">若当前手机号不再使用，请联系在线客服</string>
    <string name="check_old_phone">验证原手机号</string>
    <string name="check_bind_phone">验证后绑定新手机号</string>

    <string name="change_send_code_able">重新发送(%1$ds)</string>
    <string name="warn_tips">温馨提示</string>
    <string name="logout_tips">您的优惠券、礼品卡、账户余额、邀请好友数量，收藏等数据将失效，且不可恢复。因您已有订单记录，申请注销将转由客服人工审核，确认提交注销申请?</string>
    <string name="i_have_read">我已阅读</string>
    <string name="phone_format_error">输入的手机号格式有误</string>
    <string name="bind_new_phone">绑定新手机号</string>
    <string name="affirm_submit">确认提交</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="new_phone">新手机号</string>
    <string name="please_input_new_phone">请输入新手机号</string>
    <string name="confirm_unbind">确定要解除绑定吗？</string>

    <string name="default_size">0.00MB</string>
    <string name="clear_suc">清除成功</string>
</resources>