<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_new_phone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_set_toolbar" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView66" />

        <TextView
            android:id="@+id/textView66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/old_phone"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView66"
            app:layout_constraintTop_toTopOf="@+id/textView66"
            tools:text="1882727272" />

        <View
            android:id="@+id/view11"
            style="@style/div_hor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group2" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView68"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView68" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/new_phone"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view11" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_input_new_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="@dimen/sp14"
            app:layout_constraintBottom_toBottomOf="@+id/textView68"
            app:layout_constraintEnd_toEndOf="@+id/group9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_phone"
            app:layout_constraintTop_toTopOf="@+id/textView68"
            tools:ignore="Autofill,LabelFor"
            tools:text="123312" />

        <View
            android:id="@+id/view12"
            style="@style/div_hor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group9" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView69"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView69" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/phone_code"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view12" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_input_code"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textSize="@dimen/sp14"
            app:layout_constraintBottom_toBottomOf="@+id/textView69"
            app:layout_constraintEnd_toStartOf="@+id/tv_send"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_phone"
            app:layout_constraintTop_toTopOf="@+id/textView69"
            tools:ignore="Autofill,LabelFor"
            tools:text="123312" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/sel_btn_send_code"
            android:paddingStart="8dp"
            android:paddingTop="6dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp"
            android:text="@string/send_phone_code"
            android:textColor="@color/main_color"
            android:textSize="@dimen/sp12"
            app:layout_constraintBottom_toBottomOf="@+id/textView69"
            app:layout_constraintEnd_toEndOf="@+id/group10"
            app:layout_constraintTop_toTopOf="@+id/textView69" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/sel_btn_check_phone"
            android:text="@string/affirm_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_code" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
