<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_phone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:padding="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon_common_back_black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp18"
            app:layout_constraintBottom_toBottomOf="@+id/iv_close"
            app:layout_constraintEnd_toStartOf="@+id/iv_service"
            app:layout_constraintStart_toEndOf="@+id/iv_close"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_service"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_one_login_voice"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_wchat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_agreement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/ic_login_wechat"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/view8"
            style="@style/div_hor"
            android:layout_width="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView64"
            app:layout_constraintEnd_toStartOf="@+id/textView64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView64" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/other_account"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/sp12"
            app:layout_constraintBottom_toTopOf="@+id/iv_wchat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            style="@style/div_hor"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView64"
            app:layout_constraintTop_toTopOf="@+id/textView64" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/code_agreement"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/sp12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/phone_error_tips"
            android:textColor="@color/red"
            android:textSize="@dimen/sp12"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView61" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:digits="0123456789"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tips"
            tools:ignore="LabelFor"
            tools:text="18827272727" />

        <View
            style="@style/div_hor"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/sel_btn_login"
            android:enabled="false"
            android:text="@string/get_code"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
